# syncflow-unity-catalog-ai-platform

./: .env.example  .gitignore  ARCHITECTURE_DIAGRAM.md  DEPLOYMENT_GUIDE.md  LICENSE  README.md
DataGovbyAIagents/: .env.tpl  .gitignore  Dockerfile  Makefile  README.md  RESTRUCTURE_PLAN.md  RESTRUCTURING_SUMMARY.md  gemini_ai_agents.py  governance_dashboard.py  pyproject.toml  requirements.txt
DataGovbyAIagents/app/: __init__.py  agent.py  governance_engine.py  server.py  unity_catalog_client.py
DataGovbyAIagents/app/utils/: __init__.py  tracing.py  typing.py
DataGovbyAIagents/deployment/: README.md
DataGovbyAIagents/deployment/cd/: deploy-to-prod.yaml  staging.yaml
DataGovbyAIagents/deployment/ci/: pr_checks.yaml
DataGovbyAIagents/deployment/terraform/: apis.tf  backend.tf  outputs.tf  providers.tf  variables.tf
DataGovbyAIagents/deployment/terraform/vars/: env.tfvars
DataGovbyAIagents/docs/: API_REFERENCE.md  ARCHITECTURE.md  DEPLOYMENT_GUIDE.md
DataGovbyAIagents/frontend/: __init__.py  streamlit_app.py
DataGovbyAIagents/frontend/style/: __init__.py
DataGovbyAIagents/frontend/utils/: __init__.py  api_client.py
DataGovbyAIagents/tests/: __init__.py
DataGovbyAIagents/tests/integration/: __init__.py  test_api_integration.py
DataGovbyAIagents/tests/load_test/: __init__.py  load_test.py
DataGovbyAIagents/tests/unit/: __init__.py  test_governance_engine.py  test_server.py
unity_catalog_connector/: README.md  configuration.json  connector.py
